<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.dean.kotlin.MainActivity">

    <cn.com.dean.kotlin.view.TitleView
        android:id="@+id/title_View"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/recommend"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/recommend"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/video"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/video"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/nba"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/NBA"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/premiership"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Premiership"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/la_liga"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/La_Liga"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/bundesliga"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Bundesliga"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/champions_league"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Champions_League"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/y"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Serie_A"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/r"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/NHL"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/w"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/NFL"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/s"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Super_China"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/q"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/AFC"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/x"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="OnTitleClick"
            android:text="@string/Integrated"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

    </cn.com.dean.kotlin.view.TitleView>

    <LinearLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:weightSum="4">

        <cn.com.dean.kotlin.view.TabView
            android:id="@+id/tab_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/tab_news_selector"
                android:paddingTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/tab_news"
                android:textColor="@drawable/tab_discover_text_selector"
                android:textSize="10sp"/>
        </cn.com.dean.kotlin.view.TabView>

        <cn.com.dean.kotlin.view.TabView
            android:id="@+id/tab_match"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/tab_match_selector"
                android:paddingTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/tab_match"
                android:textColor="@drawable/tab_discover_text_selector"
                android:textSize="10sp"/>
        </cn.com.dean.kotlin.view.TabView>

        <cn.com.dean.kotlin.view.TabView
            android:id="@+id/tab_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/tab_discover_selector"
                android:paddingTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/tab_discover"
                android:textColor="@drawable/tab_discover_text_selector"
                android:textSize="10sp"/>
        </cn.com.dean.kotlin.view.TabView>

        <cn.com.dean.kotlin.view.TabView
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/tab_me_selector"
                android:paddingTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/tab_me"
                android:textColor="@drawable/tab_discover_text_selector"
                android:textSize="10sp"/>
        </cn.com.dean.kotlin.view.TabView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomView"
        android:layout_below="@id/title_View"
        android:background="@color/content_bg_color"
        android:orientation="horizontal">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
