<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <cn.com.dean.kotlin.view.TitleView
        android:id="@+id/match_title_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/match_matches"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/match_title_match"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/match_all"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/match_title_all"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/match_attention"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/match_title_attention"
            android:textColor="@drawable/tab_discover_text_selector"
            android:textSize="16sp"/>

    </cn.com.dean.kotlin.view.TitleView>

    <android.support.v4.view.ViewPager
        android:id="@+id/match_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/match_title_view"
        android:background="@color/content_bg_color">

    </android.support.v4.view.ViewPager>
</RelativeLayout>